Bug 1412678 - Ensure the window most recently interacted with is the active window. r=snorp a=gchang